# solana-snippets

./: .eslintrc.js  .gitignore  .vscodeignore  LICENSE  README.md  compile.sh  package.json  snippets.json  tsconfig.json
scaffold/anchor-program/: Cargo.toml  add-instruction.sh  add-state.sh  instruction_file
scaffold/anchor-program/src/: lib.rs
scaffold/anchor-program/src/instructions/: initialize.rs
scaffold/anchor-program/src/state/: mod.rs
snippets/: Cargo.toml
snippets/anchor/: Anchor.toml
snippets/anchor/cli/: add-instruction.sh  add-state.sh  build.sh  dep-anchor-spl-dex.sh  dep-anchor-spl.sh  deploy.sh  init.sh  set-cluster-devnet.sh  set-cluster-localnet.sh  setup-openbook.sh  setup.sh  test.sh
snippets/anchor/programs/core/: Cargo.toml
snippets/anchor/programs/core/src/: lib.rs  program.rs
snippets/anchor/programs/core/src/instructions/: context_init_pda.rs  get_account.rs  get_bump.rs  initialize.rs  instruction.rs  mod.rs
snippets/anchor/programs/core/src/instructions/dex/: create_order.rs  execute_order.rs  mod.rs  openbook_dex.rs  order.rs  orderbook_client.rs  swap.rs  (+1 more)
snippets/anchor/programs/core/tests/: test.rs
snippets/anchor/programs/core/tests/system/: mod.rs
snippets/anchor/programs/interfaces/: Cargo.toml  README.md
snippets/anchor/programs/interfaces/src/: lib.rs
snippets/anchor/programs/interfaces/src/escrow/: id.txt  mod.rs  multiple.rs  single.rs
snippets/anchor/programs/interfaces/src/jupiter/: id.txt  idl.json  multiple.rs  single.rs
snippets/anchor/programs/interfaces/src/marianade/: multiple.rs  single.rs
snippets/anchor/programs/interfaces/src/marianade-finance/: id.txt  idl.json  multiple.rs  single.rs
snippets/anchor/programs/interfaces/tests/escrow/: idl.json
snippets/client/: Cargo.toml
snippets/client/src/: lib.rs
snippets/client/src/utils/: mod.rs
snippets/client/src/utils/system/: airdrop.rs  clone_keypair.rs  create_account.rs  get_account_data.rs  get_funded_keypair.rs  mod.rs  transfer_lamports.rs
snippets/client/src/utils/token/: create_associated_token_account.rs  create_mint.rs  create_mint_token_pair.rs  create_token_account.rs  get_mint.rs  get_token_account.rs  mint_tokens.rs  mod.rs  transfer.rs
snippets/native/: Cargo.toml
snippets/native/cli/: airdrop.sh  bonk.sh  build.sh  connect-custom.sh  connect-devnet.sh  connect-mainnet.sh  connect-testnet.sh  download-account.sh  download-program.sh  load-account.sh  load-program.sh  test-validator.sh  test.sh  transfer-sol.sh  transfer-token.sh
snippets/native/src/: instruction.rs  lib.rs  processor.rs
snippets/native/src/core/system/: check_rent.rs  get_account.rs  get_accounts.rs  get_clock.rs  get_rent.rs  pack_account.rs  transfer_sol.rs  unpack_account.rs
snippets/native/src/core/token/: token_approve.rs  token_burn.rs  token_init.rs  token_revoke.rs  token_transfer.rs
snippets/native/tests/: mod.rs  system.rs  test.rs
snippets/native/tests/system/: mod.rs  transfer_sol.rs
snippets/native/tests/token/: mod.rs  token_approve.rs  token_burn.rs  token_init.rs  token_revoke.rs  token_transfer.rs
snippets/native/tests/utils/: mod.rs  system.rs  token.rs
snippets/src/: error.rs  instruction.rs  processor.rs  state.rs
snippets/src/core/: apack.rs  aunpack.rs  chrent.rs  gacc.rs  gaccs.rs  gclock.rs  get_accounts.rs  grent.rs  mod.rs  pack.rs  sbump.rs  tka.rs  tkb.rs  tki.rs  tkr.rs  tkt.rs  tsol.rs  unpack.rs
snippets/src/core/system/: mod.rs  transfer_sol.rs  unpack_account.rs
snippets/src/core/token/: mod.rs  token_approve.rs  token_init.rs  token_revoke.rs
snippets/tests/: execution.rs  system.rs  token.rs  utils.rs
snippets/tests/utils/: mod.rs  system.rs  testing.rs  token.rs
(+55 files in other folders)
