[package]
name = "snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []
serde-traits = ["serde", "serde_with"]

[dependencies]
solana-program = "1.14.7"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0.136", optional = true }
serde_with = { version = "1.14.0", optional = true }

[dev-dependencies]
solana-program-test = "1.11.6"
solana-sdk = "1.11.6"

[lib]
crate-type = ["cdylib", "lib"]