[package]
name = "solana-client"
version = "0.0.1"
edition = "2021"

[dependencies]
solana-program = "1.11.6"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
borsh = "0.9.1"
solana-program-test = "1.11.6"
solana-sdk = "1.11.6"
spl-associated-token-account = "1.1.2"

[lib]
path = "src/lib.rs"
crate-type = ["lib"]