[package]
name = "snippets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
solana-program = "1.11.6"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
thiserror = "1.0"
num-derive = "0.3"
num-traits = "0.2"
borsh = "0.9.1"

[dev-dependencies]
solana-program-test = "1.11.6"
solana-sdk = "1.11.6"
spl-associated-token-account = "1.1.2"

[lib]
crate-type = ["cdylib", "lib"]