[package]
name = "solana-anchor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_anchor"

[features]
no-entrypoint = []
test-sbf = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["dex"] }
borsh = "0.10.0"

[dev-dependencies]
anchor-client = "0.26.0"
solana-program-test = "1.14.9"
solana-sdk = "1.14.9"
solana-validator = "1.14.9"
spl-token = { version = "3.5",  features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
solana-client = { path = "../../../client" }
